--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p>这是一个简单的HTML页面示例。</p>
 	
 	<div id="myDiv" style="border: none; padding: 20px; background-color: #f0f0f0;">
-        <p>这是一个隐藏边框的div元素。</p>
+        <p>这是一个隐藏边框的div元素1234567890。</p>
         <p>您可以在这里放置更多的内容或子元素。</p>
     </div>
 	
